--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+@media (max-width: 600px) {
+  img {
+    display: none;
+  }
+}
+
 body {
   margin: 60px auto;
   max-width: 800px;
